# -rust-note2xero-core

./: Cargo.toml  README.md
src/: constants.rs  lib.rs  logging.rs  noted.rs  tests.rs  xero.rs
