[package]
name = "noted2xero_core"
version = "0.5.0"
authors = ["Philip Rodrigues <phiroict@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
log = "0.4.16"
simple_logger = "2.1.0"
env_logger = "0.9.0"
uuid =  { version = "0.8.2", features = ["serde", "v4"] }
csv = "1.1.6"