[package]
name = "noted2xero_core"
version = "1.11.8"
authors = ["Philip Rodrigues <phiroict@gmail.com>"]
edition = "2018"
description = "The NOTED to XERO conversion"
license = "GPL-2.0"
repository = "https://github.com/phiroict/-rust-note2xero-core.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
log = "0.4.17"
simple_logger = "4.1.0"
env_logger = "0.10.0"
uuid =  { version = "1.3.3", features = ["serde", "v4"] }
csv = "1.2.1"
